--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,7 +1,25 @@
-# Insert chapter 2 title here
+# Regression and model validation
 
 *Describe the work you have done this week and summarize your learning.*
 
 - Describe your work and results clearly. 
 - Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods
 - Assume the reader has no previous knowledge of your data or the more advanced methods you are using  
+
+lrn14=read.table("data/learning2014.txt", sep = ",", header = TRUE)
+
+str(lrn14)
+
+dim(lrn14)
+
+#Aineistossa on 166 havaintoyksikköä ja seitsemän muuttujaa. 
+#Muuttujat Age, Attitude, Points ovat numeerisia 
+#kokonaislukumuuttujia ja ne kertovat henkilön iän, asenteen
+#tilastotiedettä kohtaan ja koepisteet. Ikä on laskettu
+#syntymävuoden avulla. Muuttujat deep, stra ja surf ovat
+#numeerisia muuttujia. Ne kertovat henkilön vastaukset
+#syvällisiin, strategisiin ja pinnallisiin kysymyksiin.
+#gender on luokiteltu muuttuja ja sen arvo 1 kuvaa naista
+#ja arvo 2 miestä.
+
+
