--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -7,7 +7,7 @@
 #on kuitenkin mukana päiväkirjassa. Toivottavasti
 #vertaisarvioija jaksaa lukea kuvien tulkinnan vaikka
 #kuvat puuttuvat. Pahoittelen myös että päiväkirja
-#näyttää kummalliselta.
+#näyttää kummalliselta. Fontti on liian suuri.
 
 #Anna-Liina Olkinuora, 2.2.2017. Tämä tiedosto on harjoitusten
 #kaksi sisältöä varten.
