--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -7,7 +7,7 @@
 #on kuitenkin mukana päiväkirjassa, toivottavasti
 #vertaisarvioija jaksaa lukea kuvien tulkinnan vaikka
 #kuvat puuttuvat. Pahoittelen myös että päiväkirja
-#näyttää kummalliselta. 
+#näyttää kummalliselta. Fontti on liian suuri.
 
 learning2014=read.table("data/learning2014.txt", sep = ",", header = TRUE)
 
